lib/mpv_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;
import 'dart:io';

/// Auto-generated, internal bindings to mpv client
class MpvBinding {
  static ffi.DynamicLibrary get dynamicLibrary {
    if (Platform.isWindows) {
      return ffi.DynamicLibrary.open('mpv-2.dll');
    } else if (Platform.isMacOS) {
      return ffi.DynamicLibrary.open('libmpv.dylib');
    }
    return ffi.DynamicLibrary.open('libmpv.so');
  }

  static final MpvBinding i = MpvBinding(dynamicLibrary);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MpvBinding(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MpvBinding.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Return the MPV_CLIENT_API_VERSION the mpv source has been compiled with.
  int mpv_client_api_version() {
    return _mpv_client_api_version();
  }

  late final _mpv_client_api_versionPtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedLong Function()>>(
          'mpv_client_api_version');
  late final _mpv_client_api_version =
      _mpv_client_api_versionPtr.asFunction<int Function()>();

  /// Return a string describing the error. For unknown errors, the string
  /// "unknown error" is returned.
  ///
  /// @param error error number, see enum mpv_error
  /// @return A static string describing the error. The string is completely
  /// static, i.e. doesn't need to be deallocated, and is valid forever.
  ffi.Pointer<ffi.Char> mpv_error_string(
    int error,
  ) {
    return _mpv_error_string(
      error,
    );
  }

  late final _mpv_error_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int)>>(
          'mpv_error_string');
  late final _mpv_error_string =
      _mpv_error_stringPtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// General function to deallocate memory returned by some of the API functions.
  /// Call this only if it's explicitly documented as allowed. Calling this on
  /// mpv memory not owned by the caller will lead to undefined behavior.
  ///
  /// @param data A valid pointer returned by the API, or NULL.
  void mpv_free(
    ffi.Pointer<ffi.Void> data,
  ) {
    return _mpv_free(
      data,
    );
  }

  late final _mpv_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'mpv_free');
  late final _mpv_free =
      _mpv_freePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Return the name of this client handle. Every client has its own unique
  /// name, which is mostly used for user interface purposes.
  ///
  /// @return The client name. The string is read-only and is valid until the
  /// mpv_handle is destroyed.
  ffi.Pointer<ffi.Char> mpv_client_name(
    ffi.Pointer<mpv_handle> ctx,
  ) {
    return _mpv_client_name(
      ctx,
    );
  }

  late final _mpv_client_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<mpv_handle>)>>('mpv_client_name');
  late final _mpv_client_name = _mpv_client_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<mpv_handle>)>();

  /// Return the ID of this client handle. Every client has its own unique ID. This
  /// ID is never reused by the core, even if the mpv_handle at hand gets destroyed
  /// and new handles get allocated.
  ///
  /// IDs are never 0 or negative.
  ///
  /// Some mpv APIs (not necessarily all) accept a name in the form "@<id>" in
  /// addition of the proper mpv_client_name(), where "<id>" is the ID in decimal
  /// form (e.g. "@123"). For example, the "script-message-to" command takes the
  /// client name as first argument, but also accepts the client ID formatted in
  /// this manner.
  ///
  /// @return The client ID.
  int mpv_client_id(
    ffi.Pointer<mpv_handle> ctx,
  ) {
    return _mpv_client_id(
      ctx,
    );
  }

  late final _mpv_client_idPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<mpv_handle>)>>(
          'mpv_client_id');
  late final _mpv_client_id =
      _mpv_client_idPtr.asFunction<int Function(ffi.Pointer<mpv_handle>)>();

  /// Create a new mpv instance and an associated client API handle to control
  /// the mpv instance. This instance is in a pre-initialized state,
  /// and needs to be initialized to be actually used with most other API
  /// functions.
  ///
  /// Some API functions will return MPV_ERROR_UNINITIALIZED in the uninitialized
  /// state. You can call mpv_set_property() (or mpv_set_property_string() and
  /// other variants, and before mpv 0.21.0 mpv_set_option() etc.) to set initial
  /// options. After this, call mpv_initialize() to start the player, and then use
  /// e.g. mpv_command() to start playback of a file.
  ///
  /// The point of separating handle creation and actual initialization is that
  /// you can configure things which can't be changed during runtime.
  ///
  /// Unlike the command line player, this will have initial settings suitable
  /// for embedding in applications. The following settings are different:
  /// - stdin/stdout/stderr and the terminal will never be accessed. This is
  /// equivalent to setting the --no-terminal option.
  /// (Technically, this also suppresses C signal handling.)
  /// - No config files will be loaded. This is roughly equivalent to using
  /// --config=no. Since libmpv 1.15, you can actually re-enable this option,
  /// which will make libmpv load config files during mpv_initialize(). If you
  /// do this, you are strongly encouraged to set the "config-dir" option too.
  /// (Otherwise it will load the mpv command line player's config.)
  /// For example:
  /// mpv_set_option_string(mpv, "config-dir", "/my/path"); // set config root
  /// mpv_set_option_string(mpv, "config", "yes"); // enable config loading
  /// (call mpv_initialize() _after_ this)
  /// - Idle mode is enabled, which means the playback core will enter idle mode
  /// if there are no more files to play on the internal playlist, instead of
  /// exiting. This is equivalent to the --idle option.
  /// - Disable parts of input handling.
  /// - Most of the different settings can be viewed with the command line player
  /// by running "mpv --show-profile=libmpv".
  ///
  /// All this assumes that API users want a mpv instance that is strictly
  /// isolated from the command line player's configuration, user settings, and
  /// so on. You can re-enable disabled features by setting the appropriate
  /// options.
  ///
  /// The mpv command line parser is not available through this API, but you can
  /// set individual options with mpv_set_property(). Files for playback must be
  /// loaded with mpv_command() or others.
  ///
  /// Note that you should avoid doing concurrent accesses on the uninitialized
  /// client handle. (Whether concurrent access is definitely allowed or not has
  /// yet to be decided.)
  ///
  /// @return a new mpv client API handle. Returns NULL on error. Currently, this
  /// can happen in the following situations:
  /// - out of memory
  /// - LC_NUMERIC is not set to "C" (see general remarks)
  ffi.Pointer<mpv_handle> mpv_create() {
    return _mpv_create();
  }

  late final _mpv_createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<mpv_handle> Function()>>(
          'mpv_create');
  late final _mpv_create =
      _mpv_createPtr.asFunction<ffi.Pointer<mpv_handle> Function()>();

  /// Initialize an uninitialized mpv instance. If the mpv instance is already
  /// running, an error is returned.
  ///
  /// This function needs to be called to make full use of the client API if the
  /// client API handle was created with mpv_create().
  ///
  /// Only the following options are required to be set _before_ mpv_initialize():
  /// - options which are only read at initialization time:
  /// - config
  /// - config-dir
  /// - input-conf
  /// - load-scripts
  /// - script
  /// - player-operation-mode
  /// - input-app-events (OSX)
  /// - all encoding mode options
  ///
  /// @return error code
  int mpv_initialize(
    ffi.Pointer<mpv_handle> ctx,
  ) {
    return _mpv_initialize(
      ctx,
    );
  }

  late final _mpv_initializePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<mpv_handle>)>>(
          'mpv_initialize');
  late final _mpv_initialize =
      _mpv_initializePtr.asFunction<int Function(ffi.Pointer<mpv_handle>)>();

  /// Disconnect and destroy the mpv_handle. ctx will be deallocated with this
  /// API call.
  ///
  /// If the last mpv_handle is detached, the core player is destroyed. In
  /// addition, if there are only weak mpv_handles (such as created by
  /// mpv_create_weak_client() or internal scripts), these mpv_handles will
  /// be sent MPV_EVENT_SHUTDOWN. This function may block until these clients
  /// have responded to the shutdown event, and the core is finally destroyed.
  void mpv_destroy(
    ffi.Pointer<mpv_handle> ctx,
  ) {
    return _mpv_destroy(
      ctx,
    );
  }

  late final _mpv_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<mpv_handle>)>>(
          'mpv_destroy');
  late final _mpv_destroy =
      _mpv_destroyPtr.asFunction<void Function(ffi.Pointer<mpv_handle>)>();

  /// @deprecated use mpv_destroy(), which has exactly the same semantics (the
  /// deprecation is a mere rename)
  ///
  /// Since mpv client API version 1.29:
  /// If the last mpv_handle is detached, the core player is destroyed. In
  /// addition, if there are only weak mpv_handles (such as created by
  /// mpv_create_weak_client() or internal scripts), these mpv_handles will
  /// be sent MPV_EVENT_SHUTDOWN. This function may block until these clients
  /// have responded to the shutdown event, and the core is finally destroyed.
  ///
  /// Before mpv client API version 1.29:
  /// This left the player running. If you want to be sure that the
  /// player is terminated, send a "quit" command, and wait until the
  /// MPV_EVENT_SHUTDOWN event is received, or use mpv_terminate_destroy().
  void mpv_detach_destroy(
    ffi.Pointer<mpv_handle> ctx,
  ) {
    return _mpv_detach_destroy(
      ctx,
    );
  }

  late final _mpv_detach_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<mpv_handle>)>>(
          'mpv_detach_destroy');
  late final _mpv_detach_destroy = _mpv_detach_destroyPtr
      .asFunction<void Function(ffi.Pointer<mpv_handle>)>();
